Clean up unused packages, blobs and scripts
[#112020253] https://www.pivotaltracker.com/story/show/112020253

Signed-off-by: Nagapramod Mandagere <pramod@us.ibm.com>

--- a/config/final.yml
+++ b/config/final.yml
@@ -3,4 +3,4 @@ blobstore:
   provider: local
   options:
    blobstore_path: /Users/peninsula/workspace/ceph-bosh-release/local-blobs
-final_name: ceph-blobstore
+final_name: cephfs-bosh-release
