Initial move of blobs to S3
Signed-off-by: Nagapramod Mandagere <pramod@us.ibm.com>

--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -3,263 +3,259 @@ cephfs/ceph-common_9.2.0-1trusty_amd64.deb:
   object_id: 5bc72d79-d8ee-4e5f-8774-2b9e502962fb
   sha: ddd7082716047e536351eaab5b7f733f2c6466bc
   size: 5997694
-cephfs/ceph-deploy_1.5.31_all.deb:
-  object_id: 79ed99cb-a39a-45b3-957f-9339bed371ed
-  sha: 674dca66b339e829bb02708019999ac215dad3e0
-  size: 92178
-cephfs/ceph-mds_9.2.0-1trusty_amd64.deb:
-  object_id: f7087a0d-522e-4207-9663-71ffeb2f4d23
-  sha: dddfcab60e34327d2b9e0f45e59a1484a06ec440
-  size: 9694668
-cephfs/libcurl3-gnutls_7.35.0-1ubuntu2.6_amd64.deb:
-  object_id: abb5c2dc-2615-41c7-a429-978f45b51279
-  sha: 2eaf645c2b266127701e40950c5ac3f2c48d03cb
-  size: 165276
-cephfs/apt-transport-https_1.0.1ubuntu2.11_amd64.deb:
-  object_id: 7149e164-ce8f-41af-9ef7-d3c0ade90c13
-  sha: 60dbaa40254072f6ba093daf9f1ffcd009c3da87
-  size: 25044
-cephfs/libbabeltrace-ctf1_1.2.1-2_amd64.deb:
-  object_id: ce780303-3f39-4815-91fb-98fbe93ef5a3
-  sha: e55d9773899041f430e3bcc0be631ca53b3e21f4
-  size: 88322
-cephfs/libbabeltrace1_1.2.1-2_amd64.deb:
-  object_id: 79822e22-9b4a-4593-81fd-0605e7ad1154
-  sha: 81c2486ebdd3086017e8436a9b6b66d6097d86b7
-  size: 33924
-cephfs/libboost-system1.54.0_1.54.0-4ubuntu3.1_amd64.deb:
-  object_id: b40eaa3f-6f4e-46a0-b112-37940b4b9a48
-  sha: 5c9fcf9dd86dbfbe28a3770596fd8b362fd37963
-  size: 10128
-cephfs/libboost-thread1.54.0_1.54.0-4ubuntu3.1_amd64.deb:
-  object_id: edbaf4fa-0c11-4029-a3e7-1834a3562a68
-  sha: 2a70eda354cff5776222f8fe9162f3ab1823900f
-  size: 26542
-cephfs/libnspr4-0d_2%3a4.10.10-0ubuntu0.14.04.1_amd64.deb:
-  object_id: 9dbfd1c8-a4d3-4d86-9a36-0660450d41a8
-  sha: 044baf36f8dc60294ef7497cc8ec3b47a2f17ed5
-  size: 6578
-cephfs/libnspr4_2%3a4.10.10-0ubuntu0.14.04.1_amd64.deb:
-  object_id: 63491616-b76c-469a-aedd-8534b8fb999d
-  sha: 26a6de0b89306124be676828df2c7b62d8d398a5
-  size: 110502
-cephfs/libnss3-1d_2%3a3.19.2.1-0ubuntu0.14.04.2_amd64.deb:
-  object_id: 78331b07-25ec-43cf-95cc-8ae91ea80e38
-  sha: 619c68fb8774307b19364511e39989d6be6bfa96
-  size: 9296
-cephfs/libnss3_2%3a3.19.2.1-0ubuntu0.14.04.2_amd64.deb:
-  object_id: 555b69e0-1314-4e41-bd28-06d876791fe3
-  sha: 2689af33309e9b3b68bbe65f840d03f12b415f0c
-  size: 1103374
-cephfs/librados2_9.2.0-1trusty_amd64.deb:
-  object_id: 6ef822b9-82e3-4b2f-ae81-139ece941142
-  sha: 57bd2c9d1a08aabcd565819d59695289e56c2f98
-  size: 2374344
-cephfs/librbd1_9.2.0-1trusty_amd64.deb:
-  object_id: 85138fc4-96ce-4771-889f-f1e5536bbb40
-  sha: 0a30909abe3820878602c8519f7ca11e77fbf30b
-  size: 2505774
-cephfs/liblttng-ust0_2.4.0-4ubuntu1_amd64.deb:
-  object_id: e835360b-cc20-4c6d-aef7-39a50d3aa834
-  sha: 044a1af25f2e02895b48721293ac9433188a0b26
-  size: 106002
-cephfs/libnss3-nssdb_2%3a3.19.2.1-0ubuntu0.14.04.2_all.deb:
-  object_id: ff8fb41a-dd4e-4795-bbe4-a0e0589524d3
-  sha: f9724632184fd1330e80dce8b907fd183409fe64
-  size: 10562
-cephfs/liblttng-ust-ctl2_2.4.0-4ubuntu1_amd64.deb:
-  object_id: ac7efe9b-521a-4125-981a-87d349fbc9d9
-  sha: c33bc90258af82f453737cbd5de3ea783bfd9380
-  size: 61738
-cephfs/liburcu1_0.7.12-0ubuntu2_amd64.deb:
-  object_id: 0a2d86e4-db5e-47bc-bb16-085add1b3f4e
-  sha: 2ac3e285032f428b9f67c3993054ed463fb4e6ab
-  size: 34852
-cephfs/libradosstriper1_9.2.0-1trusty_amd64.deb:
-  object_id: 3c5e8476-11a0-4ed5-868b-7595bb5c98ad
-  sha: 78f8cb1445e63a029e02e8b95c9651e1f24cabd6
-  size: 2434148
-cephfs/python-cephfs_9.2.0-1trusty_amd64.deb:
-  object_id: 76e5149b-8994-4262-bc7a-97b1d9cbb4a0
-  sha: e089cccdf5a99f528c917cee0793da98e015d0c3
-  size: 865420
-cephfs/python-rados_9.2.0-1trusty_amd64.deb:
-  object_id: c0f3482c-f7c8-4dd6-90d5-626e920fb6cb
-  sha: 6d5ef2cd7a64d299ab63ac8fbf183c5feaa59603
-  size: 874652
-cephfs/python-rbd_9.2.0-1trusty_amd64.deb:
-  object_id: 788001c1-01e0-4489-a5a5-c74173b31274
-  sha: 3b08c65d9d8f8857662f89134b391c09133fd651
-  size: 869498
-cephfs/python-requests_2.2.1-1ubuntu0.3_all.deb:
-  object_id: 9fc603bb-6746-43a3-99d4-67c12e2acb64
-  sha: 2fa81f5b7995e50e52822db4d6a46326b9cbc58c
-  size: 43140
-cephfs/libboost-random1.54.0_1.54.0-4ubuntu3.1_amd64.deb:
-  object_id: 88dbfed0-1cdf-4194-85bf-a5fe2fe2d3b8
-  sha: fc59a3f26ea394d15a3dc3c93546338aae6f41bc
-  size: 9834
-cephfs/libcephfs1_9.2.0-1trusty_amd64.deb:
-  object_id: a1eedafd-a967-4ea4-a474-074a1892f442
-  sha: f919e193b8e567b00a0b1bd7105047c5f18fdec4
-  size: 2459858
-python/python_2.7.5-5ubuntu3_amd64.deb:
-  object_id: e17b7d8c-84fe-47d9-b908-4a8c2c3a8ed9
-  sha: 5337fb1bc17f737839115c80217cf4be4ce4f39b
-  size: 133698
-python/libpython-stdlib_2.7.5-5ubuntu3_amd64.deb:
-  object_id: 338cb383-07e6-4613-b66b-51377c27ffb1
-  sha: 8893ea97d8b962a56d88ff8c6234c25c1cdb2a84
-  size: 7012
-python/python-minimal_2.7.5-5ubuntu3_amd64.deb:
-  object_id: 42e3a047-aaee-450e-aca6-f28ca0cb2c3d
-  sha: 5fd061c8e2ad05737ce421ebeb7a2d4231a07fc3
-  size: 27500
-python/python2.7_2.7.6-8ubuntu0.2_amd64.deb:
-  object_id: 6485a350-f172-46db-b0d5-fed3635c4523
-  sha: b87ff6940cd17466e867a5e1e6f70fbca14cfe0c
-  size: 195822
-python/libpython2.7-stdlib_2.7.6-8ubuntu0.2_amd64.deb:
-  object_id: 5e85b7bc-e809-41b9-853f-98ed9accda4f
-  sha: b3a639145df0e1fd76a98cb4c6f1ac08f2c4de2f
-  size: 1869374
-python/python2.7-minimal_2.7.6-8ubuntu0.2_amd64.deb:
-  object_id: 09a3f8f3-1e29-41ad-ab10-8d7236c4ee40
-  sha: 984bfe30245a2e757341b0c9abb16f97ae51b0b8
-  size: 1185096
-python/libpython2.7-minimal_2.7.6-8ubuntu0.2_amd64.deb:
-  object_id: 2b095249-7ab0-4246-9d80-da333aafdefd
-  sha: d8dcfb156026bbf451502eef0fc0376fa3fabefc
-  size: 307916
-cephfs/python-chardet_2.0.1-2build2_all.deb:
-  object_id: 99ebf4f9-1ab3-41bb-a0a5-8b1dafab7cf7
-  sha: 3b8d252416dbe56bfab86d380085d657803f396f
-  size: 106256
-cephfs/python-urllib3_1.7.1-1ubuntu4_all.deb:
-  object_id: bdfc7af3-9b68-4ccf-956a-218886f152cd
-  sha: 118967ed1c76c8516d7278859c21bbd00813fce9
-  size: 39488
-cephfs/python-six_1.5.2-1ubuntu1_all.deb:
-  object_id: 0f4f0a15-bca6-444c-aaef-156d79c96d2f
-  sha: 4ccdb4e9cd2101312de47771153336f7f8a00bc9
-  size: 8238
-setuptools/python-pkg-resources_3.3-1ubuntu2_all.deb:
-  object_id: d49cffdf-97ad-474a-a7c5-fbb9d9b910b9
-  sha: 5ca65ea801c538cd41f737c5c075288d1ff1cfac
-  size: 61910
-setuptools/python-setuptools_3.3-1ubuntu2_all.deb:
-  object_id: 2fd0afdf-be96-4709-911a-40f4c86b9cef
-  sha: c0b0426d3c4bb8f45e61a9fb8f76021ee394f45b
-  size: 230056
-cephfs/ceph_9.2.0-1trusty_amd64.deb:
-  object_id: 804b4e48-c552-487d-a2b5-eafb1a50114b
-  sha: ef99249aaf0d0646b9c51b41f0a1fc30289018c1
-  size: 12201364
-cephfs/libgoogle-perftools4_2.1-2ubuntu1.1_amd64.deb:
-  object_id: b5c77e77-e270-4c71-905f-65885cb6624c
-  sha: 0af1a995be72017a994a5bc4a2bf08672168d19a
-  size: 184230
-cephfs/libtcmalloc-minimal4_2.1-2ubuntu1.1_amd64.deb:
-  object_id: b460e8dc-c866-41ff-a04b-e091cd8237e5
-  sha: 21e3560cee7cc522cb2f4e6b3353050b5c2bc080
-  size: 103390
-cephfs/libunwind8_1.1-2.2ubuntu3_amd64.deb:
-  object_id: c788ec72-0b31-4d29-a70d-d80510cc5dbc
-  sha: 0e4fdaf969a4226898f6c242d72931bedacc4043
-  size: 48294
 cephfs/cryptsetup-bin_2%3a1.6.1-1ubuntu1_amd64.deb:
-  object_id: 15992001-c16f-42a0-8878-53003b9158d6
+  object_id: 05ccdab5-59f4-444e-87b3-ee0791bce53e
   sha: 9f3d3f38f23116fe4d863bd5c7d6280fe25a4e6e
   size: 80440
 cephfs/cryptsetup_2%3a1.6.1-1ubuntu1_amd64.deb:
-  object_id: 7b1d8ffd-b234-44a3-bf5d-e4ef41f74c99
+  object_id: b029ec0b-fdb1-467f-8bd6-384a9c3da6d1
   sha: a40907ff48fcd934b78dee5cd8628c0bbee7903e
   size: 115458
+cephfs/libcryptsetup4_2%3a1.6.1-1ubuntu1_amd64.deb:
+  object_id: f188378d-9f5d-4df7-8aea-2b7762058f43
+  sha: a8e2f635fc0caee0d90d67b0f0a0bd931eb7c48d
+  size: 77020
+cephfs/libnspr4-0d_2%3a4.10.10-0ubuntu0.14.04.1_amd64.deb:
+  object_id: 7203f18a-a2ec-416c-8382-04d087d98867
+  sha: 044baf36f8dc60294ef7497cc8ec3b47a2f17ed5
+  size: 6578
+cephfs/libnspr4_2%3a4.10.10-0ubuntu0.14.04.1_amd64.deb:
+  object_id: 24986cd7-5772-48ec-8301-ed9738132bf1
+  sha: 26a6de0b89306124be676828df2c7b62d8d398a5
+  size: 110502
+cephfs/libnss3-1d_2%3a3.21-0ubuntu0.14.04.1_amd64.deb:
+  object_id: 43f8ee58-bac9-4d55-9776-dd3eb09c5313
+  sha: 292344480ac12ba0ec6f19e737fade43137ad5b3
+  size: 9298
+cephfs/libnss3-nssdb_2%3a3.21-0ubuntu0.14.04.1_all.deb:
+  object_id: a55ee53e-d06d-4507-9095-4c63ba1d01d2
+  sha: 8d52a6ade73479ffac5c0d08e051ef5b7b57ddcb
+  size: 10560
+cephfs/libnss3_2%3a3.21-0ubuntu0.14.04.1_amd64.deb:
+  object_id: 5ad01567-770e-4562-a6bc-a0ed82d7cb95
+  sha: 11927317406d2c742eca1a5d79e0dbb868caadf4
+  size: 1102722
+python27/libpython-stdlib_2.7.5-5ubuntu3_amd64.deb:
+  object_id: 2dfa52f2-b3c0-4e31-bb70-382f06d5dae0
+  sha: 8893ea97d8b962a56d88ff8c6234c25c1cdb2a84
+  size: 7012
+python27/libpython2.7-minimal_2.7.6-8ubuntu0.2_amd64.deb:
+  object_id: b43fb221-b0d6-4e75-b30c-c85ace34c24b
+  sha: d8dcfb156026bbf451502eef0fc0376fa3fabefc
+  size: 307916
+python27/libpython2.7-stdlib_2.7.6-8ubuntu0.2_amd64.deb:
+  object_id: 5a69bfd1-e6dd-482f-8f2a-3ec3c652bb9f
+  sha: b3a639145df0e1fd76a98cb4c6f1ac08f2c4de2f
+  size: 1869374
+python27/python-minimal_2.7.5-5ubuntu3_amd64.deb:
+  object_id: 56a4e5bd-6603-4e64-8ab3-678982aa8e3b
+  sha: 5fd061c8e2ad05737ce421ebeb7a2d4231a07fc3
+  size: 27500
+python27/python2.7-minimal_2.7.6-8ubuntu0.2_amd64.deb:
+  object_id: 24c98898-107f-4af6-bba1-5e7edfe79723
+  sha: 984bfe30245a2e757341b0c9abb16f97ae51b0b8
+  size: 1185096
+python27/python2.7_2.7.6-8ubuntu0.2_amd64.deb:
+  object_id: b207c784-0110-4efe-9789-3b5d9997edde
+  sha: b87ff6940cd17466e867a5e1e6f70fbca14cfe0c
+  size: 195822
+python27/python_2.7.5-5ubuntu3_amd64.deb:
+  object_id: 0cfcb282-e792-4242-bcf9-d6a97fbcf7ff
+  sha: 5337fb1bc17f737839115c80217cf4be4ce4f39b
+  size: 133698
+setuptools/python-pkg-resources_3.3-1ubuntu2_all.deb:
+  object_id: f54e8cf4-6025-4205-bbc8-4dbd1d9bbbc9
+  sha: 5ca65ea801c538cd41f737c5c075288d1ff1cfac
+  size: 61910
+setuptools/python-setuptools_3.3-1ubuntu2_all.deb:
+  object_id: 7dff99db-82d9-4b15-a297-e7688951d429
+  sha: c0b0426d3c4bb8f45e61a9fb8f76021ee394f45b
+  size: 230056
+cephfs/libboost-system1.54.0_1.54.0-4ubuntu3.1_amd64.deb:
+  object_id: 2c5c1a19-3d4e-4d19-b80c-fd160a9d3a91
+  sha: 5c9fcf9dd86dbfbe28a3770596fd8b362fd37963
+  size: 10128
+cephfs/libboost-thread1.54.0_1.54.0-4ubuntu3.1_amd64.deb:
+  object_id: 4120404f-434a-4d39-b5ed-a702d198dd5c
+  sha: 2a70eda354cff5776222f8fe9162f3ab1823900f
+  size: 26542
+cephfs/libbabeltrace-ctf1_1.2.1-2_amd64.deb:
+  object_id: 23904a17-9b2b-4f4c-9193-3cf5b8c1ad00
+  sha: e55d9773899041f430e3bcc0be631ca53b3e21f4
+  size: 88322
+cephfs/libbabeltrace1_1.2.1-2_amd64.deb:
+  object_id: 8d54e8a7-8c37-4cf9-b78d-19d9d01d9098
+  sha: 81c2486ebdd3086017e8436a9b6b66d6097d86b7
+  size: 33924
+cephfs/libboost-random1.54.0_1.54.0-4ubuntu3.1_amd64.deb:
+  object_id: 1b198750-9043-4274-ac28-46753c3c4c01
+  sha: fc59a3f26ea394d15a3dc3c93546338aae6f41bc
+  size: 9834
+cephfs/liblttng-ust-ctl2_2.4.0-4ubuntu1_amd64.deb:
+  object_id: fda114c1-760c-4a48-8cf7-b6d9c367b4be
+  sha: c33bc90258af82f453737cbd5de3ea783bfd9380
+  size: 61738
+cephfs/liblttng-ust0_2.4.0-4ubuntu1_amd64.deb:
+  object_id: 6a9c688b-eb30-44c1-90d0-b60c2b09dca4
+  sha: 044a1af25f2e02895b48721293ac9433188a0b26
+  size: 106002
+cephfs/liburcu1_0.7.12-0ubuntu2_amd64.deb:
+  object_id: b00ce9c6-5438-4f44-89ac-832df8daa342
+  sha: 2ac3e285032f428b9f67c3993054ed463fb4e6ab
+  size: 34852
+cephfs/libcephfs1_9.2.0-1trusty_amd64.deb:
+  object_id: 8b944685-ad32-4fbb-a95a-998e7e6f4c26
+  sha: f919e193b8e567b00a0b1bd7105047c5f18fdec4
+  size: 2459858
+cephfs/librados2_9.2.0-1trusty_amd64.deb:
+  object_id: 85556e7a-bc3b-4704-be75-cf492b88c25f
+  sha: 57bd2c9d1a08aabcd565819d59695289e56c2f98
+  size: 2374344
+cephfs/libradosstriper1_9.2.0-1trusty_amd64.deb:
+  object_id: 6ce33d4c-8859-408d-a462-8c714ecb52f1
+  sha: 78f8cb1445e63a029e02e8b95c9651e1f24cabd6
+  size: 2434148
+cephfs/librbd1_9.2.0-1trusty_amd64.deb:
+  object_id: 05faada2-9f18-4f32-bf49-336053539230
+  sha: 0a30909abe3820878602c8519f7ca11e77fbf30b
+  size: 2505774
+cephfs/python-cephfs_9.2.0-1trusty_amd64.deb:
+  object_id: 2e8c14cb-aca7-48f5-828e-a99db80d82c8
+  sha: e089cccdf5a99f528c917cee0793da98e015d0c3
+  size: 865420
+cephfs/python-rados_9.2.0-1trusty_amd64.deb:
+  object_id: 8e0f4d4e-6c57-4264-88f7-87f545becc61
+  sha: 6d5ef2cd7a64d299ab63ac8fbf183c5feaa59603
+  size: 874652
+cephfs/upstart_1.12.1-0ubuntu4.2_amd64.deb:
+  object_id: 202f5a62-12c2-4835-8232-976d95c762de
+  sha: 2829030248e19d5861fb547841e231b646960751
+  size: 389562
+cephfs/python-chardet_2.0.1-2build2_all.deb:
+  object_id: de1a4692-c2e3-4264-ab91-9f65cc6abd5e
+  sha: 3b8d252416dbe56bfab86d380085d657803f396f
+  size: 106256
+cephfs/python-rbd_9.2.0-1trusty_amd64.deb:
+  object_id: 65ef2ee4-c72d-4b16-90b5-4f403077bf94
+  sha: 3b08c65d9d8f8857662f89134b391c09133fd651
+  size: 869498
+cephfs/python-requests_2.2.1-1ubuntu0.3_all.deb:
+  object_id: 8d7b0372-25d8-4997-b6e1-a03105dc9f32
+  sha: 2fa81f5b7995e50e52822db4d6a46326b9cbc58c
+  size: 43140
+cephfs/python-six_1.5.2-1ubuntu1_all.deb:
+  object_id: 9daa6a8a-aa62-400d-8c06-3bcb96a8ba76
+  sha: 4ccdb4e9cd2101312de47771153336f7f8a00bc9
+  size: 8238
+cephfs/python-urllib3_1.7.1-1ubuntu4_all.deb:
+  object_id: 57187a57-a013-47b7-95d0-87bc6c9e8ccc
+  sha: 118967ed1c76c8516d7278859c21bbd00813fce9
+  size: 39488
+cephfs/ceph-deploy_1.5.31_all.deb:
+  object_id: 2751eea9-cd8d-4db5-a951-11d899166901
+  sha: 674dca66b339e829bb02708019999ac215dad3e0
+  size: 92178
+cephfs/libgoogle-perftools4_2.1-2ubuntu1.1_amd64.deb:
+  object_id: afae177a-4c1b-498a-a35c-8360889fafce
+  sha: 0af1a995be72017a994a5bc4a2bf08672168d19a
+  size: 184230
+cephfs/libtcmalloc-minimal4_2.1-2ubuntu1.1_amd64.deb:
+  object_id: 6d56b6ed-9b3f-4bb9-93ed-d300444947cb
+  sha: 21e3560cee7cc522cb2f4e6b3353050b5c2bc080
+  size: 103390
+cephfs/libunwind8_1.1-2.2ubuntu3_amd64.deb:
+  object_id: 093e0a24-12e4-4b94-9718-6c9dfa329aa3
+  sha: 0e4fdaf969a4226898f6c242d72931bedacc4043
+  size: 48294
 cephfs/gdisk_0.8.8-1ubuntu0.1_amd64.deb:
-  object_id: 43ed9d39-c637-43b5-87c5-77363abdee11
+  object_id: 06519152-0500-4d5d-b9a6-ee6d9347ae55
   sha: cdcba632584900c9158c9fa464bc01372f213971
   size: 185450
 cephfs/hdparm_9.43-1ubuntu3_amd64.deb:
-  object_id: 27c749c8-faa9-4980-abb4-1d26255e7012
+  object_id: 70df3826-79b6-499b-b7a2-c08f5cc88690
   sha: d8cc0f98d7fc6ce575507e3a989e8db64c2cf492
   size: 95132
 cephfs/libboost-program-options1.54.0_1.54.0-4ubuntu3.1_amd64.deb:
-  object_id: 55cc65b6-ad5b-449b-bec6-82b9272f3254
+  object_id: 69a16d24-9248-4de7-8710-1d00ced16e18
   sha: 5b5119f79c99ac3f10135ee059fe52c6112c021a
   size: 115234
+cephfs/libicu52_52.1-3ubuntu0.4_amd64.deb:
+  object_id: 134867dd-8029-4f8a-a879-0aa5ddb78b70
+  sha: 75caf725dd1dc543caeb991f3d7ed1ca9446d79c
+  size: 6751826
 cephfs/libleveldb1_1.15.0-2_amd64.deb:
-  object_id: 107d5d79-c035-4eaa-8355-300935118bd9
+  object_id: f63e177f-6c36-4bd7-b146-c3b1581d179b
   sha: bdb8734913909ed0db24edf4a4b35e8df3103ae2
   size: 117456
 cephfs/libsnappy1_1.1.0-1ubuntu1_amd64.deb:
-  object_id: 4439c6ee-d000-4dc4-a945-f98edd08472c
+  object_id: 96da549a-54ad-4d9b-85ab-496de3fa6940
   sha: 91ecd4736b00cfd64ff3a38bb97c7cae4f597259
   size: 11152
+cephfs/libjs-jquery_1.7.2+dfsg-2ubuntu1_all.deb:
+  object_id: fc8b29a4-bad0-4cc1-98da-1134077854f5
+  sha: 7ff557527ac4b97356d5dd1db1a73c4e5cd7362e
+  size: 78758
 cephfs/python-flask_0.10.1-2build1_all.deb:
-  object_id: 976cb5d2-2018-43a1-8c10-5d0a9fda30cf
+  object_id: 9ed1b15a-c51d-4c8b-95e3-9c7741a37285
   sha: 73db69c1b4dad8681433c94cfedebcd312736a3c
   size: 51728
-cephfs/sdparm_1.07-1_amd64.deb:
-  object_id: 69049154-9565-4ccd-bd61-c5a83814cb3d
-  sha: 4d044a2c458bf45620f25cce05f64e6e2dabd462
-  size: 109852
-cephfs/xfsprogs_3.1.9ubuntu2_amd64.deb:
-  object_id: 9614ce8c-9538-44af-9d86-6904aaf9ad68
-  sha: c0b0000a524e5e90b73d0eb05578b1ef8414e1e1
-  size: 508136
-cephfs/libcryptsetup4_2%3a1.6.1-1ubuntu1_amd64.deb:
-  object_id: bbcf12ae-668a-442f-b030-3e494b907ffc
-  sha: a8e2f635fc0caee0d90d67b0f0a0bd931eb7c48d
-  size: 77020
-cephfs/libicu52_52.1-3ubuntu0.4_amd64.deb:
-  object_id: fe1eaf21-ee42-4dfd-b928-ec2a4a05bbf1
-  sha: 75caf725dd1dc543caeb991f3d7ed1ca9446d79c
-  size: 6751826
 cephfs/python-itsdangerous_0.22+dfsg1-1build1_all.deb:
-  object_id: 8ebc05ea-7c06-4b71-adef-85322f7c21df
+  object_id: fb9da62e-1274-498f-bf0f-9befe2474f31
   sha: 1cb686225d50727fc066943a07761c7d5fad4ba9
   size: 11546
 cephfs/python-jinja2_2.7.2-2_all.deb:
-  object_id: 9508d3bf-480f-4f2e-aee6-f73a93b60da2
+  object_id: 21bf8c86-f353-4937-b4c9-332419a84d25
   sha: 833733bf8fd25c66ad83d8fd49160adac60ab63f
   size: 160620
-cephfs/python-werkzeug_0.9.4+dfsg-1.1ubuntu2_all.deb:
-  object_id: 6e9ee1d1-e524-4bbc-ad08-a17322e85546
-  sha: bb8394a4e72b40e0f65688b6da51efd9ce957c6b
-  size: 236108
 cephfs/python-markupsafe_0.18-1build2_amd64.deb:
-  object_id: 15d4b2cf-34d9-41db-b4b8-8cda1f8d81b9
+  object_id: 76bd103a-ae2c-423e-aba3-5d9bb14cb65f
   sha: 9bf02f8a0d5b6504da191587d160a6f29c828c66
   size: 14308
-cephfs/libjs-jquery_1.7.2+dfsg-2ubuntu1_all.deb:
-  object_id: ec1f9903-fc38-405e-b442-6be99318089f
-  sha: 7ff557527ac4b97356d5dd1db1a73c4e5cd7362e
-  size: 78758
+cephfs/python-werkzeug_0.9.4+dfsg-1.1ubuntu2_all.deb:
+  object_id: 7047c64b-75d3-4174-9fb2-f150d14ba525
+  sha: bb8394a4e72b40e0f65688b6da51efd9ce957c6b
+  size: 236108
+cephfs/ceph_9.2.0-1trusty_amd64.deb:
+  object_id: e65ce264-6e14-4034-a9f0-88833472ff22
+  sha: ef99249aaf0d0646b9c51b41f0a1fc30289018c1
+  size: 12201364
 cephfs/libreadline5_5.2+dfsg-2_amd64.deb:
-  object_id: 93e7aaa5-989f-4201-bd20-987894ae88cd
+  object_id: 8d764f23-51c9-46bd-bcab-9e6861cfdd1f
   sha: 5e0e4d8cbad5302244c06f79f74497a30754f8af
   size: 130428
+cephfs/sdparm_1.07-1_amd64.deb:
+  object_id: 998138d2-0890-4fb8-85ca-7a76ae108add
+  sha: 4d044a2c458bf45620f25cce05f64e6e2dabd462
+  size: 109852
+cephfs/xfsprogs_3.1.9ubuntu2_amd64.deb:
+  object_id: cc93dc96-efec-491c-b8bf-fe88c3870eab
+  sha: c0b0000a524e5e90b73d0eb05578b1ef8414e1e1
+  size: 508136
+cephfs/apt-transport-https_1.0.1ubuntu2.11_amd64.deb:
+  object_id: e9895fb4-b640-475d-9f47-01c2b863a0f2
+  sha: 60dbaa40254072f6ba093daf9f1ffcd009c3da87
+  size: 25044
 cephfs/ca-certificates_20141019ubuntu0.14.04.1_all.deb:
-  object_id: 2d1a1d00-bcdf-4d86-99fa-514ee9e82da9
+  object_id: e668b57d-ae7d-450a-a319-a82883eec65a
   sha: 11e5913e99c57e94cea15cf2178aa3c3236469bb
   size: 189272
-cephfs/upstart_1.12.1-0ubuntu4.2_amd64.deb:
-  object_id: 16736908-57e5-406c-aafe-e7457d9d4d70
-  sha: 2829030248e19d5861fb547841e231b646960751
-  size: 389562
-cephfs/uuid-runtime_2.20.1-5.1ubuntu20.7_amd64.deb:
-  object_id: 36a0ea62-74df-4ddf-bba7-eb2bb76d51b5
-  sha: cd52248729efdbe150ec23e091617d58ef653333
-  size: 12304
-cephfs/ceph-fs-common_9.2.0-1trusty_amd64.deb:
-  object_id: 6c00d0d4-a13b-49fd-b18b-4d007adbde65
-  sha: 65c6996566fd45aec52c02a76599013d58ebfdf5
-  size: 882452
 cephfs/ceph-fuse_9.2.0-1trusty_amd64.deb:
-  object_id: 9f73873a-ca64-4bff-8062-da2639802082
+  object_id: 6f712889-700e-434c-aec0-01b6d7117417
   sha: 9995a1ba7b1dead2f54b77258fd649d49769c41c
   size: 2440610
+cephfs/ceph-mds_9.2.0-1trusty_amd64.deb:
+  object_id: fdb2caf2-5187-4819-8935-1422fd495ef1
+  sha: dddfcab60e34327d2b9e0f45e59a1484a06ec440
+  size: 9694668
+cephfs/libcurl3-gnutls_7.35.0-1ubuntu2.6_amd64.deb:
+  object_id: 325198a2-20de-49b7-baec-075c493be0c5
+  sha: 2eaf645c2b266127701e40950c5ac3f2c48d03cb
+  size: 165276
 cephfs/libfuse2_2.9.2-4ubuntu4.14.04.1_amd64.deb:
-  object_id: 3690eee8-a446-4611-9716-2682f9f21e4c
+  object_id: cdb0db2e-dbf7-4113-b8b4-30fd8fe712f3
   sha: 1ed58e3a9a2b90f015bbea3774603181aaa9252f
   size: 87404
+cephfs/uuid-runtime_2.20.1-5.1ubuntu20.7_amd64.deb:
+  object_id: 6cf3e1f3-7510-4947-abf4-0b05ea3a7e92
+  sha: cd52248729efdbe150ec23e091617d58ef653333
+  size: 12304
