--- a/config/final.yml
+++ b/config/final.yml
@@ -1,6 +1,5 @@
 ---
 blobstore:
-  provider: local
+  provider: s3
   options:
-   blobstore_path: /Users/peninsula/workspace/ceph-bosh-release/local-blobs
-final_name: cephfs-bosh-release
+    bucket_name: cephblobtest
