Refactored for a portable release with shared blobstore (for boshlite on VBox) [#112020253] https://www.pivotaltracker.com/story/show/112020253 - Moved local blobs to common s3 bucket under cf-persistence account - Fixed OSD startup issue related to capacity (updated manifest to create a larger disk) - Fixed stop scripts to kill all ceph related processes
Signed-off-by: Mohamed Mohamed <mmohamed@us.ibm.com>

--- a/cephfs-manifest.yml
+++ b/cephfs-manifest.yml
@@ -1,5 +1,5 @@
 name: cephfs-bosh-release
-director_uuid: 9bca5701-66c0-43ee-a4d0-64813b4b5ece
+director_uuid: c37383cd-d5a8-43d7-b595-2ede9513c858
 
 releases:
   - name: cephfs-bosh-release
@@ -12,7 +12,7 @@ jobs:
     networks:
       - name: ceph-net
         static_ips: &web-ips [10.244.8.2]
-    persistent_disk: 1024 # for consul
+    persistent_disk: 25000 # for consul
     templates:
       - {release: cephfs-bosh-release, name: cephfs}
     properties:
@@ -27,6 +27,7 @@ networks:
       - range: 10.244.8.0/24
         gateway: 10.244.8.1
         static: *web-ips
+        cloud_properties: {}
 
 resource_pools:
   - name: ceph-resourcepool
