Add manifest generation (to remove harccoded director id) - Updated readme
[#112020253] https://www.pivotaltracker.com/story/show/112020253

Signed-off-by: Nagapramod Mandagere <pramod@us.ibm.com>

--- a/templates/cephfs-manifest-aws.yml
+++ b/templates/cephfs-manifest-aws.yml
@@ -1,5 +1,5 @@
 name: cephfs-bosh-release
-director_uuid: 9bfbfb5d-f481-474d-9e53-fd0759729354
+director_uuid: 
 
 releases:
   - name: cephfs-bosh-release
