--- a/templates/cephfs-manifest-boshlite.yml
+++ b/templates/cephfs-manifest-boshlite.yml
@@ -1,5 +1,5 @@
 name: cephfs-bosh-release
-director_uuid: 553a6e62-1b01-4e9a-9cdc-ae95a65e6ab4
+director_uuid:
 
 releases:
   - name: cephfs-bosh-release
