Pushed in Deployment name, create period pipeline.
Signed-off-by: Luke Woydziak <luke.woydziak@emc.com>

--- a/scripts/ci/teardown.build.yml
+++ b/scripts/ci/teardown.build.yml
@@ -8,7 +8,7 @@ inputs:
   - name: deployments-runtime
 
 params:
-  PACKAGE:
+  DEPLOYMENT_NAME: replace-me
 
 run:
   path: cephfs-bosh-release/scripts/ci/run_teardown
