--- a/scripts/ci/deploy.build.yml
+++ b/scripts/ci/deploy.build.yml
@@ -7,7 +7,7 @@ inputs:
   - name: cephfs-bosh-release
 
 params:
-  PACKAGE:
+  DEPLOYMENT_NAME: replace-me
 
 run:
   path: cephfs-bosh-release/scripts/ci/run_deploy
