--- a/templates/cephfs-manifest-boshlite.yml
+++ b/templates/cephfs-manifest-boshlite.yml
@@ -2,7 +2,7 @@ name:
 director_uuid:
 
 releases:
-  - name: cephfs-bosh-release
+  - name: 
     version: latest
 
 jobs:
@@ -14,7 +14,7 @@ jobs:
         static_ips: &web-ips [10.244.8.2]
     persistent_disk: 25000 # for consul
     templates:
-      - {release: cephfs-bosh-release, name: cephfs}
+      - {release: , name: cephfs}
     properties:
       ceph:
         key: value
