Add cephdriver and dependencies.
* Added a .envrc file for direnv
* modified gitignore to ignore all go-vim tools

[#115739427]

Signed-off-by: Nagapramod Mandagere <pramod@us.ibm.com>

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,20 @@ dev_releases/**/*
 config/private.yml
 config/dev.yml
 cephfs-manifest.yml
+
+## goPath system specifics
+bin/
+pkg
+
+## vim plugins to ignore
+src/9fans.net/
+src/github.com/alecthomas/
+src/github.com/golang/
+src/github.com/google/
+src/github.com/jstemmer/
+src/github.com/kisielk/
+src/github.com/klauspost/
+src/github.com/nsf/
+src/github.com/rogpeppe/
+src/golang.org/
+src/gopkg.in/
