- Added cephdriver driver_paths property to cephfs-bosh-release manifest - Used driver_paths property to start cephdriver - Fixed go dependencies   [#118848995](https://www.pivotaltracker.com/story/show/118848995)
Signed-off-by: Mohamed Mohamed <mmohamed@us.ibm.com>

--- a/templates/cephfs-manifest-aws.yml
+++ b/templates/cephfs-manifest-aws.yml
@@ -18,6 +18,10 @@ jobs:
       - {release: , name: }
     properties: {}
 
+properties:
+ cephdriver:
+  driver_paths: "/var/vcap/data/voldrivers"
+
 networks:
   - name: ceph-subnet
     type: manual
