--- a/templates/cephfs-manifest-boshlite.yml
+++ b/templates/cephfs-manifest-boshlite.yml
@@ -17,6 +17,10 @@ jobs:
       - {release: , name: }
     properties: {}
 
+properties:
+ cephdriver:
+  driver_paths: "/var/vcap/data/voldrivers"
+
 networks:
   - name: ceph-net
     type: manual
