- Added cephbroker job - Updated manifest generation to include cephbroker job
[#116907319](https://www.pivotaltracker.com/story/show/116907319)

Signed-off-by: Mohamed Mohamed <mmohamed@us.ibm.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "src/github.com/cloudfoundry/gunk"]
 	path = src/github.com/cloudfoundry/gunk
 	url = https://github.com/cloudfoundry/gunk.git
+[submodule "src/github.com/cloudfoundry-incubator/cephbroker"]
+	path = src/github.com/cloudfoundry-incubator/cephbroker
+	url = http://github.com/cloudfoundry-incubator/cephbroker
