fixing scripts 2nd try
Signed-off-by: Mohamed Mohamed <mmohamed@us.ibm.com>

--- a/scripts/ci/generate_cf_manifest.build.yml
+++ b/scripts/ci/generate_cf_manifest.build.yml
@@ -5,7 +5,7 @@ image: docker:///cloudfoundry/diego-pipeline
 
 inputs:
   - name: deployments-runtime
-  - name: cf-dev-release
+  - name: cf-release
   - name: cephfs-bosh-release
 
 outputs:
