--- a/scripts/ci/run_broker_test.build.yml
+++ b/scripts/ci/run_broker_test.build.yml
@@ -1,1 +1,13 @@
-TBD
+---
+platform: linux
+
+image: docker:///cloudfoundry/inigo-ci
+
+inputs:
+  - name: cephfs-bosh-release
+
+params:
+  PACKAGE:
+
+run:
+  path: cephfs-bosh-release/scripts/ci/run_cephbroker_unit
