--- a/templates/cephfs-manifest-boshlite.yml
+++ b/templates/cephfs-manifest-boshlite.yml
@@ -15,6 +15,7 @@ jobs:
     persistent_disk: 25000 # for consul
     templates:
       - {release: , name: }
+      - {release: , name: }
     properties: {}
 
 properties:
