--- a/templates/cephfs-manifest-aws.yml
+++ b/templates/cephfs-manifest-aws.yml
@@ -16,6 +16,7 @@ jobs:
     persistent_disk: 25000 # for consul
     templates:
       - {release: , name: }
+      - {release: , name: }
     properties: {}
 
 properties:
