Externalize bosh target [#120390089](https://www.pivotaltracker.com/story/show/120390089)
Signed-off-by: Nagapramod Mandagere <pramod@us.ibm.com>

--- a/scripts/ci/deploy.build.yml
+++ b/scripts/ci/deploy.build.yml
@@ -7,6 +7,9 @@ inputs:
   - name: cephfs-bosh-release
 
 params:
+  BOSH_TARGET: replace-me
+  BOSH_USERNAME: replace-me
+  BOSH_PASSWORD: replace-me
   DEPLOYMENT_NAME: replace-me
 
 run:
