--- a/scripts/ci/teardown.build.yml
+++ b/scripts/ci/teardown.build.yml
@@ -8,6 +8,9 @@ inputs:
   - name: deployments-runtime
 
 params:
+  BOSH_TARGET: replace-me
+  BOSH_USERNAME: replace-me
+  BOSH_PASSWORD: replace-me
   DEPLOYMENT_NAME: replace-me
 
 run:
