--- a/scripts/ci/run_acceptance_unix.build.yml
+++ b/scripts/ci/run_acceptance_unix.build.yml
@@ -10,7 +10,9 @@ inputs:
 params:
   PACKAGE:
   TRANSPORT: unix
-
+  BOSH_TARGET: replace-me
+  BOSH_USERNAME: replace-me
+  BOSH_PASSWORD: replace-me
 
 run:
   path: cephfs-bosh-release/scripts/ci/run_acceptance
