Externalize cephfs ip as an env var [#120390089](https://www.pivotaltracker.com/story/show/120390089)
Signed-off-by: Paul Warren <paul.warren@emc.com>

--- a/scripts/ci/healthcheck.build.yml
+++ b/scripts/ci/healthcheck.build.yml
@@ -12,6 +12,7 @@ params:
   BOSH_USERNAME: replace-me
   BOSH_PASSWORD: replace-me
   DEPLOYMENT_NAME: replace-me
+  CEPHFS_IP: replace-me
 
 run:
   path: cephfs-bosh-release/scripts/ci/run_healthcheck
